{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 11,
  "lineage": "3a80e421-3e70-fa8a-21c5-0d769e0e673d",
  "resources": [
    {
      "module": "module.homelike-igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848854301277:internet-gateway/igw-06e51ff7708a8f29f",
            "id": "igw-06e51ff7708a8f29f",
            "owner_id": "848854301277",
            "tags": {
              "Name": "internet Gateway"
            },
            "vpc_id": "vpc-0ddbca60026b1bba5"
          },
          "dependencies": [
            "module.homelike-vpc.aws_vpc.homelike-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.homelike-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "homelike-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848854301277:vpc/vpc-0ddbca60026b1bba5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eb328927748be65c",
            "default_route_table_id": "rtb-0118026ad545e1188",
            "default_security_group_id": "sg-0afb53b7500952da0",
            "dhcp_options_id": "dopt-bc965dc6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ddbca60026b1bba5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0118026ad545e1188",
            "owner_id": "848854301277",
            "tags": {
              "Name": "Homelike VPC"
            },
            "tags_all": {
              "Name": "Homelike VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.public-subnet",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06e51ff7708a8f29f",
            "id": "r-rtb-076f8e69f6591a4051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076f8e69f6591a405",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.homelike-igw.aws_internet_gateway.igw",
            "module.homelike-vpc.aws_vpc.homelike-vpc",
            "module.public-subnet.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848854301277:route-table/rtb-076f8e69f6591a405",
            "id": "rtb-076f8e69f6591a405",
            "owner_id": "848854301277",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public subnet"
            },
            "vpc_id": "vpc-0ddbca60026b1bba5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.homelike-vpc.aws_vpc.homelike-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd8637760b235bcf",
            "route_table_id": "rtb-076f8e69f6591a405",
            "subnet_id": "subnet-0649eb966a057270c"
          },
          "dependencies": [
            "module.homelike-igw.aws_internet_gateway.igw",
            "module.homelike-vpc.aws_vpc.homelike-vpc",
            "module.public-subnet.aws_route_table.route_table",
            "module.public-subnet.aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d42e7dbde5c9d07e",
            "route_table_id": "rtb-076f8e69f6591a405",
            "subnet_id": "subnet-0428b501277887d3c"
          },
          "dependencies": [
            "module.homelike-igw.aws_internet_gateway.igw",
            "module.homelike-vpc.aws_vpc.homelike-vpc",
            "module.public-subnet.aws_route_table.route_table",
            "module.public-subnet.aws_subnet.subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cfd2a4087a8bc0e",
            "route_table_id": "rtb-076f8e69f6591a405",
            "subnet_id": "subnet-0deddb19ca891e452"
          },
          "dependencies": [
            "module.homelike-igw.aws_internet_gateway.igw",
            "module.homelike-vpc.aws_vpc.homelike-vpc",
            "module.public-subnet.aws_route_table.route_table",
            "module.public-subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848854301277:subnet/subnet-0649eb966a057270c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0649eb966a057270c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848854301277",
            "tags": {
              "Name": "public subnet"
            },
            "tags_all": {
              "Name": "public subnet"
            },
            "vpc_id": "vpc-0ddbca60026b1bba5"
          },
          "dependencies": [
            "module.homelike-igw.aws_internet_gateway.igw",
            "module.homelike-vpc.aws_vpc.homelike-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848854301277:subnet/subnet-0428b501277887d3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0428b501277887d3c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848854301277",
            "tags": {
              "Name": "public subnet"
            },
            "tags_all": {
              "Name": "public subnet"
            },
            "vpc_id": "vpc-0ddbca60026b1bba5"
          },
          "dependencies": [
            "module.homelike-igw.aws_internet_gateway.igw",
            "module.homelike-vpc.aws_vpc.homelike-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848854301277:subnet/subnet-0deddb19ca891e452",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0deddb19ca891e452",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848854301277",
            "tags": {
              "Name": "public subnet"
            },
            "tags_all": {
              "Name": "public subnet"
            },
            "vpc_id": "vpc-0ddbca60026b1bba5"
          },
          "dependencies": [
            "module.homelike-igw.aws_internet_gateway.igw",
            "module.homelike-vpc.aws_vpc.homelike-vpc"
          ]
        }
      ]
    }
  ]
}